ultimo commit do exercício de Dom

--- a/4_DOM/index.html
+++ b/4_DOM/index.html
@@ -74,6 +74,55 @@
     </div>
 
 
+    <!--36-->
+
+    <button id="moverCima">Mover para Cima</button>
+    <button id="moverBaixo">Mover para Baixo</button>
+
+<ul id="listaMover">
+    <li>item 1</li>
+    <li>item 2</li>
+    <li>item 3</li>
+    <li>item 4</li>
+    <li>item 5</li>
+</ul> <br> <br>
+
+
+ <!--37-->
+
+    <button id="abrir">Abrir Modal</button>
+
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h1>titulo do modal</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti numquam totam maiores consequatur, quam quaerat adipisci voluptatibus laboriosam sunt necessitatibus aut, voluptates natus quia, ea quos! Dolore nobis officiis impedit.</p>
+        </div>
+    </div>
+
+
+
+    <!--38-->
+
+    <div>
+        <div class="accordion-header">Seção 1º</div>
+        <div class="accordion-content">Conteúdo da seção 1º</div>
+    </div>
+    <div>
+        <div class="accordion-header">Seção 2º</div>
+        <div class="accordion-content">Conteúdo da seção 2º</div>
+    </div>
+    <div>
+        <div class="accordion-header">Seção 3º</div>
+        <div class="accordion-content">Conteúdo da seção 3º</div>
+    </div>
+
+
+
+
+
+
+
     <script src="js.js"></script>
 </body>
 </html>
